notes on AST